[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevator-ai-adk"
version = "1.0.0"
description = "Elevator Cabin AI Designer - Google ADK Multi-Agent System"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "trimesh>=4.0.0",
    "pygltflib>=1.16.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.20",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "asyncpg>=0.29.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "black>=24.0.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "shared*", "workflows*", "services*"]
